fixing weird alignment issue

--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -10,6 +10,7 @@ h1 {
 }
 
 ul {
+  padding-inline-start: 0px;
   .navmenu {
     text-align: center;
 
